# tesla-lightshow-visualizer

./: .gitignore  CMakeLists.txt  README.md  TODO.md  org.jreznik.TeslaLightshowVisualizer.metainfo.xml  org.jreznik.TeslaLightshowVisualizer.yaml  qml.qrc  tesla-lightshow-visualizer.desktop  tesla-lightshow-visualizer.pro
.github/workflows/: build.yml
assets/: Cybertruck_patched.mtl  ModelS_patched.mtl
assets/ct_meshes/: Cybertruck_patched.qml
meshes/: README.md
meshes/Cybertruck/: ct_Frunk_mesh.mesh  ct_Mirror_R_mesh.mesh  ct_Rear_Bar_mesh.mesh  lights_mesh.mesh
meshes/ModelS/: charge_Cap_mesh.mesh  door_RF_Mirror_mesh.mesh  door_RF_mesh.mesh  front_Fog_L_mesh.mesh  front_Sig_L_mesh.mesh  rear_Tail_L_mesh.mesh  window_RF_mesh.mesh
qml/: CybertruckCar.qml  ModelSCar.qml  ModelSCarInternal.qml  main.qml
qml/cars/Cybertruck/: CybertruckCar.qml  Cybertruck_patched.qml
qml/cars/Cybertruck/meshes/: Cybertruck_patched.qml  body_mesh.mesh  ct_Mirror_L_mesh.mesh  windows_mesh.mesh
qml/cars/ModelS/: ModelSCar.qml
qml/cars/ModelS/meshes/: door_LR_mesh.mesh  door_RR_mesh.mesh  front_Inner_L_mesh.mesh  front_Sig_R_mesh.mesh  front_Turn_L_mesh.mesh  lights_2_mesh.mesh  lights_mesh.mesh  rear_Other_L_mesh.mesh  side_Repeater_R_mesh.mesh  trunk_mesh.mesh
qml/meshes/: door_LF_Mirror_mesh.mesh  front_Outer_L_mesh.mesh  hood_Hinge_2_mesh.mesh  lights_5_mesh.mesh  rear_Other_R_mesh.mesh  wheels_mesh.mesh  window_LR_mesh.mesh  windows_Top_mesh.mesh
qml/meshes/Cybertruck/: ct_Front_Bar_mesh.mesh  ct_Main_Beams_mesh.mesh  ct_Offroad_Bar_mesh.mesh  wheels_mesh.mesh
qml/meshes/ModelS/: body_mesh.mesh  door_LF_mesh.mesh  front_Fog_R_mesh.mesh  front_Inner_R_mesh.mesh  front_Outer_R_mesh.mesh  front_Turn_R_mesh.mesh  hood_Hinge_1_mesh.mesh  hood_mesh.mesh  lights_0_mesh.mesh  lights_1_mesh.mesh  lights_3_mesh.mesh  lights_4_mesh.mesh  rear_Brake_L_mesh.mesh  rear_Brake_R_mesh.mesh  rear_Tail_R_mesh.mesh  side_Repeater_L_mesh.mesh  spoiler_mesh.mesh  window_LF_mesh.mesh  window_RR_mesh.mesh
qml/shaders/: BrushedSteelMaterial.qml  brushed_steel.frag
src/: fseq_reader.cpp  fseq_reader.h  lightshow_sync.cpp  lightshow_sync.h  main.cpp
tools/: analyze_ct_coords.py  analyze_lights.py  analyze_mtl_coords.py  analyze_repeater_mtl.py  find_repeater_faces.py  map_body_slots.py  patch_ct.py  patch_obj.py
tools/analysis/: analyze_car_coords.py  analyze_ct_coords.py  analyze_lower_lights.py
